--- a/index.html
+++ b/index.html
@@ -60,7 +60,8 @@
             Let us bring sweetness to your celebrations with a variety of
             scrumptious cakes, prompt delivery, and excellent customer service.
           </p>
-          <button type="button" class="btn btn-warning">Order Now</button>
+          <button  onclick="document.write('Hello Everyone')"
+          type="button" class="btn btn-warning">Order Now</button>
         </div>
         <div class="col">
           <img
@@ -70,6 +71,25 @@
           />
         </div>
       </div>
+      <!-- table section 3 -->
+      <table style="width:100%">
+        <tr>
+          <th>Company</th>
+          <th>Contact</th>
+          <th>Country</th>
+        </tr>
+        <tr>
+          <td>Alfreds Futterkiste</td>
+          <td>Maria Anders</td>
+          <td>Germany</td>
+        </tr>
+        <tr>
+          <td>Centro comercial Moctezuma</td>
+          <td>Francisco Chang</td>
+          <td>Mexico</td>
+        </tr>
+      </table>
+      
       <!-- Service Section 3 -->
       <h1 class="container text-danger">Our Services</h1>
 
@@ -145,6 +165,16 @@
           <a class="nav-link disabled" href="#">Disabled</a>
         </li>
       </ul>
+      <!-- JS Function -->
+      <script>
+        let x = myFunction(4, 3);
+        document.getElementById("demo").innerHTML = x;
+        
+        function myFunction(a, b) {
+          return a * b;
+        }
+
+        </script>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
