--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
             Let us bring sweetness to your celebrations with a variety of
             scrumptious cakes, prompt delivery, and excellent customer service.
           </p>
-          <button  onclick="document.write('Hello Everyone')"
+          <button  onclick="window.alert('Hello Everyone')"
           type="button" class="btn btn-warning">Order Now</button>
         </div>
         <div class="col">
@@ -165,16 +165,7 @@
           <a class="nav-link disabled" href="#">Disabled</a>
         </li>
       </ul>
-      <!-- JS Function -->
-      <script>
-        let x = myFunction(4, 3);
-        document.getElementById("demo").innerHTML = x;
-        
-        function myFunction(a, b) {
-          return a * b;
-        }
-
-        </script>
+     
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
