--- a/index.html
+++ b/index.html
@@ -165,7 +165,8 @@
           <a class="nav-link disabled" href="#">Disabled</a>
         </li>
       </ul>
-     
+<!-- Animation  -->
+      <div id="animation">Let's enjoy the great cakes</div>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
