--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <!-- Navbar Section 1 -->
@@ -60,8 +60,13 @@
             Let us bring sweetness to your celebrations with a variety of
             scrumptious cakes, prompt delivery, and excellent customer service.
           </p>
-          <button  onclick="window.alert('Hello Everyone')"
-          type="button" class="btn btn-warning">Order Now</button>
+          <button
+            onclick="window.alert('Hello Everyone')"
+            type="button"
+            class="btn btn-warning"
+          >
+            Order Now
+          </button>
         </div>
         <div class="col">
           <img
@@ -72,7 +77,7 @@
         </div>
       </div>
       <!-- table section 3 -->
-      <table style="width:100%">
+      <table style="width: 100%">
         <tr>
           <th>Company</th>
           <th>Contact</th>
@@ -89,7 +94,10 @@
           <td>Mexico</td>
         </tr>
       </table>
-      
+      <br /><br />
+      <!-- Animation  -->
+      <div id="animation">Let's enjoy the great cakes</div>
+
       <!-- Service Section 3 -->
       <h1 class="container text-danger">Our Services</h1>
 
@@ -152,21 +160,20 @@
     </div>
     <!-- section 5 -->
     <ul class="nav nav-tabs">
-        <li class="nav-item">
-          <a class="nav-link active" href="#">Active</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Link</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Link</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link disabled" href="#">Disabled</a>
-        </li>
-      </ul>
-<!-- Animation  -->
-      <div id="animation">Let's enjoy the great cakes</div>
+      <li class="nav-item">
+        <a class="nav-link active" href="#">Active</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#">Link</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#">Link</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link disabled" href="#">Disabled</a>
+      </li>
+    </ul>
+
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
