--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
       </div>
     </nav>
     <div class="container">
-      <!-- Content Section 2  -->
+      <!-- Content Section 3  -->
       <div class="row mt-4 p-5 text-dark">
         <div class="col">
           <h1 class="text-danger">Ziara Cakes</h1>
@@ -76,7 +76,40 @@
           />
         </div>
       </div>
-      <!-- table section 3 -->
+
+      <div class="row mt-4 p-5 text-dark">
+        <div class="col">
+          <img
+            src="images/choco.jpg "
+            style="width: 450px"
+            class="h-6 img-thumbnail"
+          />
+        </div>
+        <div class="col">
+          
+          <h1 class="text-danger">Ziara Cakes</h1>
+          <p>
+            In todays fast-paced world, celebrating special moments with your
+            loved ones should be hassle-free and delightful. Whether it's a
+            birthday, anniversary, or any festive occasion, the joy of cutting a
+            delicious cake can be delivered right to your doorstep with our
+            online cake delivery service
+          </p>
+          <p class="lead">
+            Let us bring sweetness to your celebrations with a variety of
+            scrumptious cakes, prompt delivery, and excellent customer service.
+          </p>
+          <button
+            onclick="window.alert('Hello Everyone')"
+            type="button"
+            class="btn btn-warning"
+          >
+            Order Now
+          </button>
+        </div>
+        
+      </div>
+      <!-- table section 4 -->
       <table style="width: 100%">
         <tr>
           <th>Company</th>
@@ -114,7 +147,7 @@
         </div>
         <div class="col">
           <div class="card" style="width: 300px" style="height: 100px">
-            <img class="card-img-top" src="images/cake3.jpg" alt="Card image" />
+            <img class="card-img-top" src="images/download.jpeg" alt="Card image" />
             <div class="card-body">
               <h4 class="card-title">John Doe</h4>
               <p class="card-text">Some example text.</p>
@@ -123,11 +156,11 @@
           </div>
         </div>
         <div class="col">
-          <div class="card" style="width: 300px" style="height: 100px">
-            <img class="card-img-top" src="images/cake3.jpg" alt="Card image" />
+          <div class="card" style="width: 300px" style="height:70px">
+            <img class="card-img-top" src="images/choco.jpg" alt="Card image" />
             <div class="card-body">
               <h4 class="card-title">John Doe</h4>
-              <p class="card-text">Some example text.</p>
+              <p class="card-text">Some example text here.</p>
               <a href="#" class="btn btn-primary">See Profile</a>
             </div>
           </div>
